<resources>
    <string name="app_name">HistoryAround</string>

    <!-- Common -->
    <string name="ok" translatable="false">OK</string>
    <string name="ignore">Ignore</string>
    <string name="settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="remove">Remove</string>

    <!-- Common errors -->
    <string name="no_internet_error_label">No Internet connection</string>
    <string name="no_internet_error_message">Make sure you have data transfer turned on and you have Internet access and try again</string>

    <!-- Permissions -->
    <string name="permissions_message">You need to grant the app some permissions before you can use it</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="permissions_denied_title">Permissions denied</string>
    <string name="permissions_denied_message">It seems you have denied the app one or more of the permissions it needs to run. To use the app please grant the permissions in device app settings.</string>
    <!-- Location -->
    <string name="location_permission_label">Permission to access location</string>
    <string name="location_rationale">The app need access to your location to look for interesting places around you\nIt will not store or use it in any other way</string>
    <!-- Internet -->
    <string name="internet_permission_label">Permission to access the Internet</string>
    <string name="internet_rationale">The app needs access to the Internet in order to find interesting information about places around you</string>
    <!-- Storage -->
    <string name="storage_permission_label">Storage permission</string>
    <string name="storage_rationale">The app needs permission to write to your storage in order to save map tiles so as not to load them every time you open the map screen</string>
    <!-- Network State -->
    <string name="network_state_permission_label">Access to network state</string>
    <string name="network_state_rationale">The app needs access to network state to figure out whether it is possible to load data from the Internet</string>

    <!-- Google Services Error -->
    <string name="google_error_services_label">Google Services are unavailable</string>
    <string name="google_error_services_message">HistoryAround app relies on Google Services to determine location and cannot work without them. Please attempt to install them from Google Play Store if possible and try again.</string>

    <!-- Loading location -->
    <string name="loading_location_label">Figuring out your location</string>
    <!-- Location Permission Error -->

    <string name="location_error_permission_label">Permission to access location</string>
    <string name="location_error_permission_message">The app need access to your location to look for interesting places around you\nIt will not store or use it in any other way</string>
    <!-- Location Service Error -->
    <string name="location_error_services_label">Location Services are unavailable</string>
    <string name="location_error_services_message">Make sure you have geolocation turned on in device settings and try again</string>
    <!-- Location Error -->
    <string name="location_error_label">Could not determine your location</string>
    <string name="location_error_message">Make sure geolocation is turned on and your geolocation services are able to determine your location and try again</string>

    <!-- Loading articles -->
    <string name="loading_articles_label">Loading information about places of interest around you</string>
    <!-- Articles Error -->
    <string name="loading_articles_error_label">Could not load information from Wikipedia</string>
    <string name="loading_articles_error_message">Make sure you have Internet connection and Wikipedia is accessible, and try again</string>

    <!-- Loading details -->
    <string name="loading_details_label">Loading information about the place</string>
    <!-- Details error -->
    <string name="loading_details_error_label">Could not load information from Wikipedia</string>
    <string name="loading_details_error_message">Make sure you have Internet connection and Wikipedia is accessible, and try again</string>

    <!-- Loading permissions -->
    <string name="loading_permissions_label">Checking permissions</string>
    <!-- Permissions error -->
    <string name="loading_permissions_error_label">Failed to check permissions</string>
    <string name="loading_permissions_error_message">Please try again</string>

    <!-- Article details -->
    <string name="no_map_app_error">Maps application not found, please install one and try again</string>

    <!-- Places -->
    <string name="places">Places</string>

    <!-- Menu -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favorites_add">Add to favorites</string>
    <string name="menu_favorites_remove">Remove from favorites</string>
    <string name="menu_show_in_map">Show in map</string>

    <!-- Preferences -->
    <!-- Radius -->
    <string name="prefs_radius_title">Search radius in meters</string>
    <string name="prefs_radius_key" translatable="false">pref_radius</string>
    <string name="prefs_radius_default_value" translatable="false">250</string>
    <!-- Language -->
    <string name="prefs_lang_code_title">Articles language</string>
    <string name="prefs_lang_code_key" translatable="false">pref_lang_code</string>
    <string name="prefs_lang_code_default_value" translatable="false"></string>
    <string name="prefs_lang_code_default_summary">Device language</string>

    <!-- Loading favorites -->
    <string name="loading_favorites_label">Loading your favorite items</string>
    <!-- Favorites error -->
    <string name="loading_favorites_error_label">Failed to load favorite items</string>
    <string name="loading_favorites_error_message">Something went wrong, please try again</string>

    <!-- Fragment titles -->
    <string name="map_fragment_title" translatable="false">@string/app_name</string>
    <string name="favorites_fragment_title">Favorites</string>
    <string name="details_fragment_title">Place info</string>
    <string name="permissions_fragment_title" translatable="false">@string/app_name</string>
    <string name="menu_favorites">Favorites</string>
    <string name="preferences_fragment_title">Preferences</string>

    <!-- Accessibility strings -->
    <string name="acc_drawer_open">Open drawer</string>
    <string name="acc_drawer_close">Close drawer</string>
</resources>
