<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/error_padding">

    <ImageView
        android:layout_width="@dimen/error_icon_size"
        android:layout_height="@dimen/error_icon_size"

        android:src="@drawable/ic_error_outline"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="@dimen/error_label_text_size"
        android:textAlignment="center"
        android:layout_marginTop="16dp"

        android:text="@string/loading_details_error_label"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="@dimen/error_message_text_size"
        android:textAlignment="center"
        android:layout_marginTop="4dp"

        android:text="@string/loading_details_error_message"/>

    <Button
        android:id="@+id/retry"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        android:text="@string/retry"/>
</LinearLayout>